set(BASE_DIR        "fltk")
set(SRC_DIR         "${BASE_DIR}/src")
set(INCLUDE_DIR     "${BASE_DIR}/FL")

set(INCLUDE_PATHS
    ${BASE_DIR}
)

set(EXPORTED_INCLUDE_PATHS
    ${BASE_DIR}
)

set(SOURCE_FILES
    "${BASE_DIR}/config.h"
    "${INCLUDE_DIR}/Enumerations.H"
    "${INCLUDE_DIR}/filename.H"
    "${INCLUDE_DIR}/Fl.H"
    "${INCLUDE_DIR}/Fl_Adjuster.H"
    "${INCLUDE_DIR}/fl_ask.H"
    "${INCLUDE_DIR}/fl_attr.h"
    "${INCLUDE_DIR}/Fl_Bitmap.H"
    "${INCLUDE_DIR}/Fl_BMP_Image.H"
    "${INCLUDE_DIR}/Fl_Box.H"
    "${INCLUDE_DIR}/Fl_Browser.H"
    "${INCLUDE_DIR}/Fl_Browser_.H"
    "${INCLUDE_DIR}/Fl_Button.H"
    "${INCLUDE_DIR}/Fl_Cairo.H"
    "${INCLUDE_DIR}/Fl_Cairo_Window.H"
    "${INCLUDE_DIR}/fl_casts.H"
    "${INCLUDE_DIR}/Fl_Chart.H"
    "${INCLUDE_DIR}/Fl_Check_Browser.H"
    "${INCLUDE_DIR}/Fl_Check_Button.H"
    "${INCLUDE_DIR}/Fl_Choice.H"
    "${INCLUDE_DIR}/Fl_Clock.H"
    "${INCLUDE_DIR}/Fl_Color_Chooser.H"
    "${INCLUDE_DIR}/fl_config.h"
    "${INCLUDE_DIR}/Fl_Copy_Surface.H"
    "${INCLUDE_DIR}/Fl_Counter.H"
    "${INCLUDE_DIR}/Fl_Device.H"
    "${INCLUDE_DIR}/Fl_Dial.H"
    "${INCLUDE_DIR}/Fl_Double_Window.H"
    "${INCLUDE_DIR}/fl_draw.H"
    "${INCLUDE_DIR}/Fl_Export.H"
    "${INCLUDE_DIR}/Fl_File_Browser.H"
    "${INCLUDE_DIR}/Fl_File_Chooser.H"
    "${INCLUDE_DIR}/Fl_File_Icon.H"
    "${INCLUDE_DIR}/Fl_File_Input.H"
    "${INCLUDE_DIR}/Fl_Fill_Dial.H"
    "${INCLUDE_DIR}/Fl_Fill_Slider.H"
    "${INCLUDE_DIR}/Fl_Float_Input.H"
    "${INCLUDE_DIR}/Fl_FormsBitmap.H"
    "${INCLUDE_DIR}/Fl_FormsPixmap.H"
    "${INCLUDE_DIR}/Fl_Free.H"
    "${INCLUDE_DIR}/Fl_GIF_Image.H"
    "${INCLUDE_DIR}/Fl_Graphics_Driver.H"
    "${INCLUDE_DIR}/Fl_Group.H"
    "${INCLUDE_DIR}/Fl_Help_Dialog.H"
    "${INCLUDE_DIR}/Fl_Help_View.H"
    "${INCLUDE_DIR}/Fl_Hold_Browser.H"
    "${INCLUDE_DIR}/Fl_Hor_Fill_Slider.H"
    "${INCLUDE_DIR}/Fl_Hor_Nice_Slider.H"
    "${INCLUDE_DIR}/Fl_Hor_Slider.H"
    "${INCLUDE_DIR}/Fl_Hor_Value_Slider.H"
    "${INCLUDE_DIR}/Fl_Image.H"
    "${INCLUDE_DIR}/Fl_Image_Surface.H"
    "${INCLUDE_DIR}/Fl_Input.H"
    "${INCLUDE_DIR}/Fl_Input_.H"
    "${INCLUDE_DIR}/Fl_Input_Choice.H"
    "${INCLUDE_DIR}/Fl_Int_Input.H"
    "${INCLUDE_DIR}/Fl_JPEG_Image.H"
    "${INCLUDE_DIR}/Fl_Light_Button.H"
    "${INCLUDE_DIR}/Fl_Line_Dial.H"
    "${INCLUDE_DIR}/Fl_Menu.H"
    "${INCLUDE_DIR}/Fl_Menu_.H"
    "${INCLUDE_DIR}/Fl_Menu_Bar.H"
    "${INCLUDE_DIR}/Fl_Menu_Button.H"
    "${INCLUDE_DIR}/Fl_Menu_Item.H"
    "${INCLUDE_DIR}/Fl_Menu_Window.H"
    "${INCLUDE_DIR}/fl_message.H"
    "${INCLUDE_DIR}/Fl_Multi_Browser.H"
    "${INCLUDE_DIR}/Fl_Multi_Label.H"
    "${INCLUDE_DIR}/Fl_Multiline_Input.H"
    "${INCLUDE_DIR}/Fl_Multiline_Output.H"
    "${INCLUDE_DIR}/Fl_Native_File_Chooser.H"
    "${INCLUDE_DIR}/Fl_Nice_Slider.H"
    "${INCLUDE_DIR}/Fl_Object.H"
    "${INCLUDE_DIR}/Fl_Output.H"
    "${INCLUDE_DIR}/Fl_Overlay_Window.H"
    "${INCLUDE_DIR}/Fl_Pack.H"
    "${INCLUDE_DIR}/Fl_Paged_Device.H"
    "${INCLUDE_DIR}/Fl_Pixmap.H"
    "${INCLUDE_DIR}/Fl_Plugin.H"
    "${INCLUDE_DIR}/Fl_PNG_Image.H"
    "${INCLUDE_DIR}/Fl_PNM_Image.H"
    "${INCLUDE_DIR}/Fl_Positioner.H"
    "${INCLUDE_DIR}/Fl_PostScript.H"
    "${INCLUDE_DIR}/Fl_Preferences.H"
    "${INCLUDE_DIR}/Fl_Printer.H"
    "${INCLUDE_DIR}/Fl_Progress.H"
    "${INCLUDE_DIR}/Fl_Radio_Button.H"
    "${INCLUDE_DIR}/Fl_Radio_Light_Button.H"
    "${INCLUDE_DIR}/Fl_Radio_Round_Button.H"
    "${INCLUDE_DIR}/Fl_Rect.H"
    "${INCLUDE_DIR}/Fl_Repeat_Button.H"
    "${INCLUDE_DIR}/Fl_Return_Button.H"
    "${INCLUDE_DIR}/Fl_RGB_Image.H"
    "${INCLUDE_DIR}/Fl_Roller.H"
    "${INCLUDE_DIR}/Fl_Round_Button.H"
    "${INCLUDE_DIR}/Fl_Round_Clock.H"
    "${INCLUDE_DIR}/Fl_Scroll.H"
    "${INCLUDE_DIR}/Fl_Scrollbar.H"
    "${INCLUDE_DIR}/Fl_Secret_Input.H"
    "${INCLUDE_DIR}/Fl_Select_Browser.H"
    "${INCLUDE_DIR}/Fl_Shared_Image.H"
    "${INCLUDE_DIR}/fl_show_colormap.H"
    "${INCLUDE_DIR}/fl_show_input.H"
    "${INCLUDE_DIR}/Fl_Simple_Counter.H"
    "${INCLUDE_DIR}/Fl_Simple_Terminal.H"
    "${INCLUDE_DIR}/Fl_Single_Window.H"
    "${INCLUDE_DIR}/Fl_Slider.H"
    "${INCLUDE_DIR}/Fl_Spinner.H"
    "${INCLUDE_DIR}/Fl_String.H"
    "${INCLUDE_DIR}/fl_string_functions.h"
    "${INCLUDE_DIR}/Fl_SVG_File_Surface.H"
    "${INCLUDE_DIR}/Fl_SVG_Image.H"
    "${INCLUDE_DIR}/Fl_Sys_Menu_Bar.H"
    "${INCLUDE_DIR}/Fl_Table.H"
    "${INCLUDE_DIR}/Fl_Table_Row.H"
    "${INCLUDE_DIR}/Fl_Tabs.H"
    "${INCLUDE_DIR}/Fl_Text_Buffer.H"
    "${INCLUDE_DIR}/Fl_Text_Display.H"
    "${INCLUDE_DIR}/Fl_Text_Editor.H"
    "${INCLUDE_DIR}/Fl_Tile.H"
    "${INCLUDE_DIR}/Fl_Tiled_Image.H"
    "${INCLUDE_DIR}/Fl_Timer.H"
    "${INCLUDE_DIR}/Fl_Toggle_Button.H"
    "${INCLUDE_DIR}/Fl_Toggle_Light_Button.H"
    "${INCLUDE_DIR}/Fl_Toggle_Round_Button.H"
    "${INCLUDE_DIR}/Fl_Tooltip.H"
    "${INCLUDE_DIR}/Fl_Tree.H"
    "${INCLUDE_DIR}/Fl_Tree_Item.H"
    "${INCLUDE_DIR}/Fl_Tree_Item_Array.H"
    "${INCLUDE_DIR}/Fl_Tree_Prefs.H"
    "${INCLUDE_DIR}/fl_types.h"
    "${INCLUDE_DIR}/fl_utf8.h"
    "${INCLUDE_DIR}/Fl_Valuator.H"
    "${INCLUDE_DIR}/Fl_Value_Input.H"
    "${INCLUDE_DIR}/Fl_Value_Output.H"
    "${INCLUDE_DIR}/Fl_Value_Slider.H"
    "${INCLUDE_DIR}/Fl_Widget.H"
    "${INCLUDE_DIR}/Fl_Widget_Surface.H"
    "${INCLUDE_DIR}/Fl_Window.H"
    "${INCLUDE_DIR}/Fl_Wizard.H"
    "${INCLUDE_DIR}/Fl_XBM_Image.H"
    "${INCLUDE_DIR}/Fl_XPM_Image.H"
    "${INCLUDE_DIR}/forms.H"
    "${INCLUDE_DIR}/gl.h"
    "${INCLUDE_DIR}/gl2opengl.h"
    "${INCLUDE_DIR}/gl_draw.H"
    "${INCLUDE_DIR}/glu.h"
    "${INCLUDE_DIR}/glut.H"
    "${INCLUDE_DIR}/mac.H"
    "${INCLUDE_DIR}/math.h"
    "${INCLUDE_DIR}/names.h"
    "${INCLUDE_DIR}/platform.H"
    "${INCLUDE_DIR}/platform_types.h"    
    "${INCLUDE_DIR}/win32.H"
    "${INCLUDE_DIR}/x.H"
    "${SRC_DIR}/cgdebug.h"
    "${SRC_DIR}/fastarrow.h"
    "${SRC_DIR}/filename_absolute.cxx"
    "${SRC_DIR}/filename_expand.cxx"
    "${SRC_DIR}/filename_ext.cxx"
    "${SRC_DIR}/filename_isdir.cxx"
    "${SRC_DIR}/filename_list.cxx"
    "${SRC_DIR}/filename_match.cxx"
    "${SRC_DIR}/filename_setext.cxx"
    "${SRC_DIR}/Fl.cxx"
    "${SRC_DIR}/Fl_abort.cxx"
    "${SRC_DIR}/Fl_add_idle.cxx"
    "${SRC_DIR}/Fl_Adjuster.cxx"
    "${SRC_DIR}/fl_arc.cxx"
    "${SRC_DIR}/Fl_arg.cxx"
    "${SRC_DIR}/fl_ask.cxx"
    "${SRC_DIR}/Fl_Bitmap.cxx"
    "${SRC_DIR}/Fl_BMP_Image.cxx"
    "${SRC_DIR}/Fl_Box.cxx"
    "${SRC_DIR}/fl_boxtype.cxx"
    "${SRC_DIR}/Fl_Browser.cxx"
    "${SRC_DIR}/Fl_Browser_.cxx"
    "${SRC_DIR}/Fl_Browser_load.cxx"
    "${SRC_DIR}/Fl_Button.cxx"
    "${SRC_DIR}/fl_call_main.c"
    "${SRC_DIR}/Fl_Chart.cxx"
    "${SRC_DIR}/Fl_Check_Browser.cxx"
    "${SRC_DIR}/Fl_Check_Button.cxx"
    "${SRC_DIR}/Fl_Choice.cxx"
    "${SRC_DIR}/Fl_Clock.cxx"
    "${SRC_DIR}/fl_cmap.h"
    "${SRC_DIR}/fl_color.cxx"
    "${SRC_DIR}/Fl_Color_Chooser.cxx"
    "${SRC_DIR}/Fl_compose.cxx"
    "${SRC_DIR}/Fl_Copy_Surface.cxx"
    "${SRC_DIR}/Fl_Counter.cxx"
    "${SRC_DIR}/fl_cursor.cxx"
    "${SRC_DIR}/fl_curve.cxx"
    "${SRC_DIR}/Fl_Device.cxx"
    "${SRC_DIR}/Fl_Dial.cxx"
    "${SRC_DIR}/fl_diamond_box.cxx"
    "${SRC_DIR}/Fl_display.cxx"
    "${SRC_DIR}/Fl_Double_Window.cxx"
    "${SRC_DIR}/fl_draw.cxx"
    "${SRC_DIR}/fl_draw_pixmap.cxx"
    "${SRC_DIR}/fl_encoding_latin1.cxx"
    "${SRC_DIR}/fl_encoding_mac_roman.cxx"
    "${SRC_DIR}/fl_engraved_label.cxx"
    "${SRC_DIR}/Fl_File_Browser.cxx"
    "${SRC_DIR}/Fl_File_Chooser.cxx"
    "${SRC_DIR}/Fl_File_Chooser2.cxx"
    "${SRC_DIR}/fl_file_dir.cxx"
    "${SRC_DIR}/Fl_File_Icon.cxx"
    "${SRC_DIR}/Fl_File_Icon2.cxx"
    "${SRC_DIR}/Fl_File_Input.cxx"
    "${SRC_DIR}/fl_font.cxx"
    "${SRC_DIR}/Fl_get_system_colors.cxx"
    "${SRC_DIR}/Fl_GIF_Image.cxx"
    "${SRC_DIR}/fl_gleam.cxx"
    "${SRC_DIR}/Fl_grab.cxx"
    "${SRC_DIR}/Fl_Graphics_Driver.cxx"
    "${SRC_DIR}/Fl_Group.cxx"
    "${SRC_DIR}/fl_gtk.cxx"    
    "${SRC_DIR}/Fl_Help_Dialog.cxx"
    "${SRC_DIR}/Fl_Help_Dialog_Dox.cxx"
    "${SRC_DIR}/Fl_Help_View.cxx"
    "${SRC_DIR}/Fl_Image.cxx"
    "${SRC_DIR}/Fl_Image_Reader.cxx"
    "${SRC_DIR}/Fl_Image_Reader.h"
    "${SRC_DIR}/Fl_Image_Surface.cxx"
    "${SRC_DIR}/fl_images_core.cxx"
    "${SRC_DIR}/Fl_Input.cxx"
    "${SRC_DIR}/Fl_Input_.cxx"
    "${SRC_DIR}/Fl_Input_Choice.cxx"
    "${SRC_DIR}/Fl_JPEG_Image.cxx"
    "${SRC_DIR}/fl_labeltype.cxx"
    "${SRC_DIR}/Fl_Light_Button.cxx"
    "${SRC_DIR}/Fl_lock.cxx"
    "${SRC_DIR}/Fl_Menu.cxx"
    "${SRC_DIR}/Fl_Menu_.cxx"
    "${SRC_DIR}/Fl_Menu_add.cxx"
    "${SRC_DIR}/Fl_Menu_Bar.cxx"
    "${SRC_DIR}/Fl_Menu_Button.cxx"
    "${SRC_DIR}/Fl_Menu_global.cxx"
    "${SRC_DIR}/Fl_Menu_Window.cxx"
    "${SRC_DIR}/Fl_Message.cxx"
    "${SRC_DIR}/Fl_Message.h"
    "${SRC_DIR}/Fl_Multi_Label.cxx"
    "${SRC_DIR}/Fl_Native_File_Chooser.cxx"
    "${SRC_DIR}/fl_open_uri.cxx"
    "${SRC_DIR}/fl_oval_box.cxx"
    "${SRC_DIR}/fl_overlay.cxx"
    "${SRC_DIR}/Fl_Overlay_Window.cxx"
    "${SRC_DIR}/Fl_own_colormap.cxx"
    "${SRC_DIR}/Fl_Pack.cxx"
    "${SRC_DIR}/Fl_Paged_Device.cxx"
    "${SRC_DIR}/Fl_Pixmap.cxx"
    "${SRC_DIR}/fl_plastic.cxx"
    "${SRC_DIR}/Fl_PNG_Image.cxx"
    "${SRC_DIR}/Fl_PNM_Image.cxx"
    "${SRC_DIR}/Fl_Positioner.cxx"
    "${SRC_DIR}/Fl_Preferences.cxx"
    "${SRC_DIR}/Fl_Printer.cxx"
    "${SRC_DIR}/Fl_Progress.cxx"
    "${SRC_DIR}/fl_read_image.cxx"
    "${SRC_DIR}/fl_rect.cxx"
    "${SRC_DIR}/Fl_Repeat_Button.cxx"
    "${SRC_DIR}/Fl_Return_Button.cxx"
    "${SRC_DIR}/Fl_Roller.cxx"
    "${SRC_DIR}/fl_round_box.cxx"
    "${SRC_DIR}/Fl_Round_Button.cxx"
    "${SRC_DIR}/fl_rounded_box.cxx"
    "${SRC_DIR}/Fl_Screen_Driver.cxx"
    "${SRC_DIR}/Fl_Screen_Driver.H"
    "${SRC_DIR}/Fl_Scroll.cxx"
    "${SRC_DIR}/fl_scroll_area.cxx"
    "${SRC_DIR}/Fl_Scrollbar.cxx"
    "${SRC_DIR}/fl_set_font.cxx"
    "${SRC_DIR}/fl_shadow_box.cxx"
    "${SRC_DIR}/Fl_Shared_Image.cxx"
    "${SRC_DIR}/fl_shortcut.cxx"
    "${SRC_DIR}/fl_show_colormap.cxx"
    "${SRC_DIR}/Fl_Simple_Terminal.cxx"
    "${SRC_DIR}/Fl_Single_Window.cxx"
    "${SRC_DIR}/Fl_Slider.cxx"
    "${SRC_DIR}/Fl_Spinner.cxx"
    "${SRC_DIR}/Fl_String.cxx"
    "${SRC_DIR}/fl_string_functions.cxx"
    "${SRC_DIR}/Fl_SVG_Image.cxx"
    "${SRC_DIR}/fl_symbols.cxx"
    "${SRC_DIR}/Fl_Sys_Menu_Bar.cxx"
    "${SRC_DIR}/Fl_Sys_Menu_Bar_Driver.H"
    "${SRC_DIR}/Fl_System_Driver.cxx"
    "${SRC_DIR}/Fl_System_Driver.H"
    "${SRC_DIR}/Fl_Table.cxx"
    "${SRC_DIR}/Fl_Table_Row.cxx"
    "${SRC_DIR}/Fl_Tabs.cxx"
    "${SRC_DIR}/Fl_Text_Buffer.cxx"
    "${SRC_DIR}/Fl_Text_Display.cxx"
    "${SRC_DIR}/Fl_Text_Editor.cxx"
    "${SRC_DIR}/Fl_Tile.cxx"
    "${SRC_DIR}/Fl_Tiled_Image.cxx"
    "${SRC_DIR}/Fl_Timeout.cxx"
    "${SRC_DIR}/Fl_Timeout.h"
    "${SRC_DIR}/Fl_Tooltip.cxx"
    "${SRC_DIR}/Fl_Tree.cxx"
    "${SRC_DIR}/Fl_Tree_Item.cxx"
    "${SRC_DIR}/Fl_Tree_Item_Array.cxx"
    "${SRC_DIR}/Fl_Tree_Prefs.cxx"
    "${SRC_DIR}/fl_utf8.cxx"
    "${SRC_DIR}/Fl_Valuator.cxx"
    "${SRC_DIR}/Fl_Value_Input.cxx"
    "${SRC_DIR}/Fl_Value_Output.cxx"
    "${SRC_DIR}/Fl_Value_Slider.cxx"
    "${SRC_DIR}/fl_vertex.cxx"
    "${SRC_DIR}/Fl_visual.cxx"
    "${SRC_DIR}/Fl_Widget.cxx"
    "${SRC_DIR}/Fl_Widget_Surface.cxx"
    "${SRC_DIR}/Fl_Window.cxx"
    "${SRC_DIR}/Fl_Window_Driver.cxx"
    "${SRC_DIR}/Fl_Window_Driver.H"
    "${SRC_DIR}/Fl_Window_fullscreen.cxx"
    "${SRC_DIR}/Fl_Window_hotspot.cxx"
    "${SRC_DIR}/Fl_Window_iconize.cxx"
    "${SRC_DIR}/Fl_Wizard.cxx"
    "${SRC_DIR}/fl_write_png.cxx"
    "${SRC_DIR}/Fl_XBM_Image.cxx"
    "${SRC_DIR}/Fl_XColor.H"
    "${SRC_DIR}/Fl_XPM_Image.cxx"
    "${SRC_DIR}/flstring.c"
    "${SRC_DIR}/flstring.h"
    "${SRC_DIR}/forms_bitmap.cxx"
    "${SRC_DIR}/forms_compatibility.cxx"
    "${SRC_DIR}/forms_free.cxx"
    "${SRC_DIR}/forms_fselect.cxx"
    "${SRC_DIR}/forms_pixmap.cxx"
    "${SRC_DIR}/forms_timer.cxx"
    "${SRC_DIR}/mediumarrow.h"
    "${SRC_DIR}/numericsort.c"
    "${SRC_DIR}/print_button.cxx"
    "${SRC_DIR}/print_button.h"
    "${SRC_DIR}/screen_xywh.cxx"
    "${SRC_DIR}/slowarrow.h"
    "${SRC_DIR}/utf8_internal.h"
    "${SRC_DIR}/vsnprintf.c"
    "${SRC_DIR}/xutf8/case.c"
    "${SRC_DIR}/xutf8/headers/case.h"
    "${SRC_DIR}/xutf8/headers/dingbats_.h"
    "${SRC_DIR}/xutf8/headers/spacing.h"
    "${SRC_DIR}/xutf8/headers/symbol_.h"
    "${SRC_DIR}/xutf8/is_right2left.c"
    "${SRC_DIR}/xutf8/is_spacing.c"
    "${SRC_DIR}/xutf8/Ximint.h"
    "${SRC_DIR}/xutf8/Xlibint.h"
)

if (PLATFORM_WINDOWS)
    list(APPEND SOURCE_FILES
        "${SRC_DIR}/drivers/GDI/Fl_Font.H"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Copy_Surface_Driver.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Copy_Surface_Driver.H"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver.H"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver_arci.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver_color.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver_font.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver_image.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver_line_style.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver_rect.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Graphics_Driver_vertex.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Image_Surface_Driver.cxx"
        "${SRC_DIR}/drivers/GDI/Fl_GDI_Image_Surface_Driver.H"
        "${SRC_DIR}/drivers/WinAPI/fl_WinAPI_platform_init.cxx"
        "${SRC_DIR}/drivers/WinAPI/Fl_WinAPI_Printer_Driver.cxx"
        "${SRC_DIR}/drivers/WinAPI/Fl_WinAPI_Screen_Driver.cxx"
        "${SRC_DIR}/drivers/WinAPI/Fl_WinAPI_Screen_Driver.H"
        "${SRC_DIR}/drivers/WinAPI/Fl_WinAPI_System_Driver.cxx"
        "${SRC_DIR}/drivers/WinAPI/Fl_WinAPI_System_Driver.H"
        "${SRC_DIR}/drivers/WinAPI/Fl_WinAPI_Window_Driver.cxx"
        "${SRC_DIR}/drivers/WinAPI/Fl_WinAPI_Window_Driver.H"
        "${SRC_DIR}/fl_dnd_win32.cxx"
        "${SRC_DIR}/Fl_get_key_win32.cxx"
        "${SRC_DIR}/Fl_Native_File_Chooser_WIN32.cxx"
        "${SRC_DIR}/Fl_win32.cxx"
        "${SRC_DIR}/scandir_win32.c"
    )
endif()

if (PLATFORM_MAC OR PLATFORM_LINUX)
    list(APPEND SOURCE_FILES
        "${SRC_DIR}/drivers/Posix/Fl_Posix_Printer_Driver.cxx"
        "${SRC_DIR}/drivers/Posix/Fl_Posix_System_Driver.cxx"
        "${SRC_DIR}/drivers/Posix/Fl_Posix_System_Driver.H"
        "${SRC_DIR}/scandir_posix.c"
    )
endif()

if (PLATFORM_MAC)
    list(APPEND SOURCE_FILES
        "${SRC_DIR}/drivers/Cocoa/Fl_Cocoa_Gl_Window_Driver.cxx"
        "${SRC_DIR}/drivers/Cocoa/Fl_Cocoa_Gl_Window_Driver.H"
        "${SRC_DIR}/drivers/Cocoa/Fl_Cocoa_Printer_Driver.mm"
        "${SRC_DIR}/drivers/Cocoa/Fl_Cocoa_Screen_Driver.cxx"
        "${SRC_DIR}/drivers/Cocoa/Fl_Cocoa_Screen_Driver.H"
        "${SRC_DIR}/drivers/Cocoa/Fl_Cocoa_Window_Driver.cxx"
        "${SRC_DIR}/drivers/Cocoa/Fl_Cocoa_Window_Driver.H"
        "${SRC_DIR}/drivers/Cocoa/Fl_MacOS_Sys_Menu_Bar_Driver.H"
        "${SRC_DIR}/drivers/Darwin/Fl_Darwin_System_Driver.cxx"
        "${SRC_DIR}/drivers/Darwin/Fl_Darwin_System_Driver.H"
        "${SRC_DIR}/drivers/Darwin/fl_macOS_platform_init.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Font.H"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Copy_Surface_Driver.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Copy_Surface_Driver.H"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver.H"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver_arci.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver_color.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver_font.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver_image.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver_line_style.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver_rect.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Graphics_Driver_vertex.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Image_Surface_Driver.cxx"
        "${SRC_DIR}/drivers/Quartz/Fl_Quartz_Image_Surface_Driver.H"
        "${SRC_DIR}/Fl_cocoa.mm"
        "${SRC_DIR}/Fl_get_key_mac.cxx"
        "${SRC_DIR}/Fl_MacOS_Sys_Menu_Bar.mm"
        "${SRC_DIR}/Fl_Native_File_Chooser_MAC.mm"
    )
endif()

if (PLATFORM_LINUX)
    list(APPEND SOURCE_FILES
        "${INCLUDE_DIR}/wayland.H"
        "${INCLUDE_DIR}/x11.H"
        "${SRC_DIR}/drivers/PostScript/Fl_PostScript.cxx"
        "${SRC_DIR}/drivers/PostScript/Fl_PostScript_Graphics_Driver.H"
        "${SRC_DIR}/drivers/PostScript/Fl_PostScript_image.cxx"
        "${SRC_DIR}/drivers/Unix/Fl_Unix_System_Driver.cxx"
        "${SRC_DIR}/drivers/Unix/Fl_Unix_System_Driver.H"
        "${SRC_DIR}/drivers/X11/fl_X11_gl_platform_init.cxx"
        "${SRC_DIR}/drivers/X11/Fl_X11_Gl_Window_Driver.cxx"
        "${SRC_DIR}/drivers/X11/Fl_X11_Gl_Window_Driver.H"
        "${SRC_DIR}/drivers/X11/fl_X11_platform_init.cxx"
        "${SRC_DIR}/drivers/X11/Fl_X11_Screen_Driver.cxx"
        "${SRC_DIR}/drivers/X11/Fl_X11_Screen_Driver.H"
        "${SRC_DIR}/drivers/X11/Fl_X11_System_Driver.cxx"
        "${SRC_DIR}/drivers/X11/Fl_X11_System_Driver.H"
        "${SRC_DIR}/drivers/X11/Fl_X11_Window_Driver.cxx"
        "${SRC_DIR}/drivers/X11/Fl_X11_Window_Driver.H"
        "${SRC_DIR}/drivers/Xlib/Fl_Font.H"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Copy_Surface_Driver.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Copy_Surface_Driver.H"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver.H"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver_arci.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver_color.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver_font_x.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver_image.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver_line_style.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver_rect.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Graphics_Driver_vertex.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Image_Surface_Driver.cxx"
        "${SRC_DIR}/drivers/Xlib/Fl_Xlib_Image_Surface_Driver.H"
        "${SRC_DIR}/fl_dnd_x.cxx"
        "${SRC_DIR}/Fl_get_key.cxx"
        "${SRC_DIR}/Fl_Native_File_Chooser_FLTK.cxx"
        "${SRC_DIR}/Fl_Native_File_Chooser_GTK.cxx"
        "${SRC_DIR}/Fl_Native_File_Chooser_Kdialog.cxx"
        "${SRC_DIR}/Fl_Native_File_Chooser_Kdialog.H"
        "${SRC_DIR}/Fl_x.cxx"
        "${SRC_DIR}/Xutf8.h"
        "${SRC_DIR}/xutf8/keysym2Ucs.c"
        "${SRC_DIR}/xutf8/ucs2fontmap.c"
        "${SRC_DIR}/xutf8/utf8Input.c"
        "${SRC_DIR}/xutf8/utf8Utils.c"
        "${SRC_DIR}/xutf8/utf8Wrap.c"
    )
endif()

add_library(${FLTK_TGT_NAME} ${SOURCE_FILES} ${OTHER_FILES})
setup_source_groups("${SOURCE_FILES}" "${OTHER_FILES}")

include_directories(${INCLUDE_PATHS})
target_include_directories(${FLTK_TGT_NAME} INTERFACE ${EXPORTED_INCLUDE_PATHS})
target_compile_definitions(${FLTK_TGT_NAME} PUBLIC -DFL_LIBRARY=1)

if (PLATFORM_WINDOWS)
    target_link_libraries(${FLTK_TGT_NAME}
        Comctl32.lib
    )
endif()

if (PLATFORM_LINUX)
    # Add Freetype2 include files and libraries
    find_package(Freetype REQUIRED)
    target_link_libraries(${FLTK_TGT_NAME} ${FREETYPE_LIBRARIES})
    target_include_directories(${FLTK_TGT_NAME} PRIVATE ${FREETYPE_INCLUDE_DIRS})
endif()

if (COMPILER_CLANG OR COMPILER_GCC)
    target_compile_options(${FLTK_TGT_NAME} PRIVATE -Wno-deprecated-declarations)       # No warnings about using deprecated library functions
endif()
