set(SRC_DIR "glm")
set(INC_DIR "${SRC_DIR}")

set(INCLUDE_PATHS
    ${INC_DIR}
)

set(SOURCE_FILES
    "${SRC_DIR}/glm/common.hpp"
    "${SRC_DIR}/glm/detail/_features.hpp"
    "${SRC_DIR}/glm/detail/_fixes.hpp"
    "${SRC_DIR}/glm/detail/_noise.hpp"
    "${SRC_DIR}/glm/detail/_swizzle.hpp"
    "${SRC_DIR}/glm/detail/_swizzle_func.hpp"
    "${SRC_DIR}/glm/detail/_vectorize.hpp"
    "${SRC_DIR}/glm/detail/compute_common.hpp"
    "${SRC_DIR}/glm/detail/compute_vector_relational.hpp"
    "${SRC_DIR}/glm/detail/func_common.inl"
    "${SRC_DIR}/glm/detail/func_common_simd.inl"
    "${SRC_DIR}/glm/detail/func_exponential.inl"
    "${SRC_DIR}/glm/detail/func_exponential_simd.inl"
    "${SRC_DIR}/glm/detail/func_geometric.inl"
    "${SRC_DIR}/glm/detail/func_geometric_simd.inl"
    "${SRC_DIR}/glm/detail/func_integer.inl"
    "${SRC_DIR}/glm/detail/func_integer_simd.inl"
    "${SRC_DIR}/glm/detail/func_matrix.inl"
    "${SRC_DIR}/glm/detail/func_matrix_simd.inl"
    "${SRC_DIR}/glm/detail/func_packing.inl"
    "${SRC_DIR}/glm/detail/func_packing_simd.inl"
    "${SRC_DIR}/glm/detail/func_trigonometric.inl"
    "${SRC_DIR}/glm/detail/func_trigonometric_simd.inl"
    "${SRC_DIR}/glm/detail/func_vector_relational.inl"
    "${SRC_DIR}/glm/detail/func_vector_relational_simd.inl"
    "${SRC_DIR}/glm/detail/glm.cpp"
    "${SRC_DIR}/glm/detail/qualifier.hpp"
    "${SRC_DIR}/glm/detail/setup.hpp"
    "${SRC_DIR}/glm/detail/type_float.hpp"
    "${SRC_DIR}/glm/detail/type_half.hpp"
    "${SRC_DIR}/glm/detail/type_half.inl"
    "${SRC_DIR}/glm/detail/type_mat2x2.hpp"
    "${SRC_DIR}/glm/detail/type_mat2x2.inl"
    "${SRC_DIR}/glm/detail/type_mat2x3.hpp"
    "${SRC_DIR}/glm/detail/type_mat2x3.inl"
    "${SRC_DIR}/glm/detail/type_mat2x4.hpp"
    "${SRC_DIR}/glm/detail/type_mat2x4.inl"
    "${SRC_DIR}/glm/detail/type_mat3x2.hpp"
    "${SRC_DIR}/glm/detail/type_mat3x2.inl"
    "${SRC_DIR}/glm/detail/type_mat3x3.hpp"
    "${SRC_DIR}/glm/detail/type_mat3x3.inl"
    "${SRC_DIR}/glm/detail/type_mat3x4.hpp"
    "${SRC_DIR}/glm/detail/type_mat3x4.inl"
    "${SRC_DIR}/glm/detail/type_mat4x2.hpp"
    "${SRC_DIR}/glm/detail/type_mat4x2.inl"
    "${SRC_DIR}/glm/detail/type_mat4x3.hpp"
    "${SRC_DIR}/glm/detail/type_mat4x3.inl"
    "${SRC_DIR}/glm/detail/type_mat4x4.hpp"
    "${SRC_DIR}/glm/detail/type_mat4x4.inl"
    "${SRC_DIR}/glm/detail/type_mat4x4_simd.inl"
    "${SRC_DIR}/glm/detail/type_quat.hpp"
    "${SRC_DIR}/glm/detail/type_quat.inl"
    "${SRC_DIR}/glm/detail/type_quat_simd.inl"
    "${SRC_DIR}/glm/detail/type_vec1.hpp"
    "${SRC_DIR}/glm/detail/type_vec1.inl"
    "${SRC_DIR}/glm/detail/type_vec2.hpp"
    "${SRC_DIR}/glm/detail/type_vec2.inl"
    "${SRC_DIR}/glm/detail/type_vec3.hpp"
    "${SRC_DIR}/glm/detail/type_vec3.inl"
    "${SRC_DIR}/glm/detail/type_vec4.hpp"
    "${SRC_DIR}/glm/detail/type_vec4.inl"
    "${SRC_DIR}/glm/detail/type_vec4_simd.inl"
    "${SRC_DIR}/glm/exponential.hpp"
    "${SRC_DIR}/glm/ext.hpp"
    "${SRC_DIR}/glm/ext/matrix_clip_space.hpp"
    "${SRC_DIR}/glm/ext/matrix_clip_space.inl"
    "${SRC_DIR}/glm/ext/matrix_common.hpp"
    "${SRC_DIR}/glm/ext/matrix_common.inl"
    "${SRC_DIR}/glm/ext/matrix_double2x2.hpp"
    "${SRC_DIR}/glm/ext/matrix_double2x2_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_double2x3.hpp"
    "${SRC_DIR}/glm/ext/matrix_double2x3_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_double2x4.hpp"
    "${SRC_DIR}/glm/ext/matrix_double2x4_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_double3x2.hpp"
    "${SRC_DIR}/glm/ext/matrix_double3x2_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_double3x3.hpp"
    "${SRC_DIR}/glm/ext/matrix_double3x3_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_double3x4.hpp"
    "${SRC_DIR}/glm/ext/matrix_double3x4_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_double4x2.hpp"
    "${SRC_DIR}/glm/ext/matrix_double4x2_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_double4x3.hpp"
    "${SRC_DIR}/glm/ext/matrix_double4x3_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_double4x4.hpp"
    "${SRC_DIR}/glm/ext/matrix_double4x4_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float2x2.hpp"
    "${SRC_DIR}/glm/ext/matrix_float2x2_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float2x3.hpp"
    "${SRC_DIR}/glm/ext/matrix_float2x3_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float2x4.hpp"
    "${SRC_DIR}/glm/ext/matrix_float2x4_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float3x2.hpp"
    "${SRC_DIR}/glm/ext/matrix_float3x2_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float3x3.hpp"
    "${SRC_DIR}/glm/ext/matrix_float3x3_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float3x4.hpp"
    "${SRC_DIR}/glm/ext/matrix_float3x4_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float4x2.hpp"
    "${SRC_DIR}/glm/ext/matrix_float4x2_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float4x3.hpp"
    "${SRC_DIR}/glm/ext/matrix_float4x3_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_float4x4.hpp"
    "${SRC_DIR}/glm/ext/matrix_float4x4_precision.hpp"
    "${SRC_DIR}/glm/ext/matrix_projection.hpp"
    "${SRC_DIR}/glm/ext/matrix_projection.inl"
    "${SRC_DIR}/glm/ext/matrix_relational.hpp"
    "${SRC_DIR}/glm/ext/matrix_relational.inl"
    "${SRC_DIR}/glm/ext/matrix_transform.hpp"
    "${SRC_DIR}/glm/ext/matrix_transform.inl"
    "${SRC_DIR}/glm/ext/quaternion_common.hpp"
    "${SRC_DIR}/glm/ext/quaternion_common.inl"
    "${SRC_DIR}/glm/ext/quaternion_common_simd.inl"
    "${SRC_DIR}/glm/ext/quaternion_double.hpp"
    "${SRC_DIR}/glm/ext/quaternion_double_precision.hpp"
    "${SRC_DIR}/glm/ext/quaternion_exponential.hpp"
    "${SRC_DIR}/glm/ext/quaternion_exponential.inl"
    "${SRC_DIR}/glm/ext/quaternion_float.hpp"
    "${SRC_DIR}/glm/ext/quaternion_float_precision.hpp"
    "${SRC_DIR}/glm/ext/quaternion_geometric.hpp"
    "${SRC_DIR}/glm/ext/quaternion_geometric.inl"
    "${SRC_DIR}/glm/ext/quaternion_relational.hpp"
    "${SRC_DIR}/glm/ext/quaternion_relational.inl"
    "${SRC_DIR}/glm/ext/quaternion_transform.hpp"
    "${SRC_DIR}/glm/ext/quaternion_transform.inl"
    "${SRC_DIR}/glm/ext/quaternion_trigonometric.hpp"
    "${SRC_DIR}/glm/ext/quaternion_trigonometric.inl"
    "${SRC_DIR}/glm/ext/scalar_common.hpp"
    "${SRC_DIR}/glm/ext/scalar_common.inl"
    "${SRC_DIR}/glm/ext/scalar_constants.hpp"
    "${SRC_DIR}/glm/ext/scalar_constants.inl"
    "${SRC_DIR}/glm/ext/scalar_int_sized.hpp"
    "${SRC_DIR}/glm/ext/scalar_integer.hpp"
    "${SRC_DIR}/glm/ext/scalar_integer.inl"
    "${SRC_DIR}/glm/ext/scalar_relational.hpp"
    "${SRC_DIR}/glm/ext/scalar_relational.inl"
    "${SRC_DIR}/glm/ext/scalar_uint_sized.hpp"
    "${SRC_DIR}/glm/ext/scalar_ulp.hpp"
    "${SRC_DIR}/glm/ext/scalar_ulp.inl"
    "${SRC_DIR}/glm/ext/vector_bool1.hpp"
    "${SRC_DIR}/glm/ext/vector_bool1_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_bool2.hpp"
    "${SRC_DIR}/glm/ext/vector_bool2_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_bool3.hpp"
    "${SRC_DIR}/glm/ext/vector_bool3_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_bool4.hpp"
    "${SRC_DIR}/glm/ext/vector_bool4_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_common.hpp"
    "${SRC_DIR}/glm/ext/vector_common.inl"
    "${SRC_DIR}/glm/ext/vector_double1.hpp"
    "${SRC_DIR}/glm/ext/vector_double1_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_double2.hpp"
    "${SRC_DIR}/glm/ext/vector_double2_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_double3.hpp"
    "${SRC_DIR}/glm/ext/vector_double3_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_double4.hpp"
    "${SRC_DIR}/glm/ext/vector_double4_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_float1.hpp"
    "${SRC_DIR}/glm/ext/vector_float1_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_float2.hpp"
    "${SRC_DIR}/glm/ext/vector_float2_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_float3.hpp"
    "${SRC_DIR}/glm/ext/vector_float3_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_float4.hpp"
    "${SRC_DIR}/glm/ext/vector_float4_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_int1.hpp"
    "${SRC_DIR}/glm/ext/vector_int1_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_int2.hpp"
    "${SRC_DIR}/glm/ext/vector_int2_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_int3.hpp"
    "${SRC_DIR}/glm/ext/vector_int3_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_int4.hpp"
    "${SRC_DIR}/glm/ext/vector_int4_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_integer.hpp"
    "${SRC_DIR}/glm/ext/vector_integer.inl"
    "${SRC_DIR}/glm/ext/vector_relational.hpp"
    "${SRC_DIR}/glm/ext/vector_relational.inl"
    "${SRC_DIR}/glm/ext/vector_uint1.hpp"
    "${SRC_DIR}/glm/ext/vector_uint1_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_uint2.hpp"
    "${SRC_DIR}/glm/ext/vector_uint2_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_uint3.hpp"
    "${SRC_DIR}/glm/ext/vector_uint3_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_uint4.hpp"
    "${SRC_DIR}/glm/ext/vector_uint4_precision.hpp"
    "${SRC_DIR}/glm/ext/vector_ulp.hpp"
    "${SRC_DIR}/glm/ext/vector_ulp.inl"
    "${SRC_DIR}/glm/fwd.hpp"
    "${SRC_DIR}/glm/geometric.hpp"
    "${SRC_DIR}/glm/glm.hpp"
    "${SRC_DIR}/glm/gtc/bitfield.hpp"
    "${SRC_DIR}/glm/gtc/bitfield.inl"
    "${SRC_DIR}/glm/gtc/color_space.hpp"
    "${SRC_DIR}/glm/gtc/color_space.inl"
    "${SRC_DIR}/glm/gtc/constants.hpp"
    "${SRC_DIR}/glm/gtc/constants.inl"
    "${SRC_DIR}/glm/gtc/epsilon.hpp"
    "${SRC_DIR}/glm/gtc/epsilon.inl"
    "${SRC_DIR}/glm/gtc/integer.hpp"
    "${SRC_DIR}/glm/gtc/integer.inl"
    "${SRC_DIR}/glm/gtc/matrix_access.hpp"
    "${SRC_DIR}/glm/gtc/matrix_access.inl"
    "${SRC_DIR}/glm/gtc/matrix_integer.hpp"
    "${SRC_DIR}/glm/gtc/matrix_inverse.hpp"
    "${SRC_DIR}/glm/gtc/matrix_inverse.inl"
    "${SRC_DIR}/glm/gtc/matrix_transform.hpp"
    "${SRC_DIR}/glm/gtc/matrix_transform.inl"
    "${SRC_DIR}/glm/gtc/noise.hpp"
    "${SRC_DIR}/glm/gtc/noise.inl"
    "${SRC_DIR}/glm/gtc/packing.hpp"
    "${SRC_DIR}/glm/gtc/packing.inl"
    "${SRC_DIR}/glm/gtc/quaternion.hpp"
    "${SRC_DIR}/glm/gtc/quaternion.inl"
    "${SRC_DIR}/glm/gtc/quaternion_simd.inl"
    "${SRC_DIR}/glm/gtc/random.hpp"
    "${SRC_DIR}/glm/gtc/random.inl"
    "${SRC_DIR}/glm/gtc/reciprocal.hpp"
    "${SRC_DIR}/glm/gtc/reciprocal.inl"
    "${SRC_DIR}/glm/gtc/round.hpp"
    "${SRC_DIR}/glm/gtc/round.inl"
    "${SRC_DIR}/glm/gtc/type_aligned.hpp"
    "${SRC_DIR}/glm/gtc/type_precision.hpp"
    "${SRC_DIR}/glm/gtc/type_precision.inl"
    "${SRC_DIR}/glm/gtc/type_ptr.hpp"
    "${SRC_DIR}/glm/gtc/type_ptr.inl"
    "${SRC_DIR}/glm/gtc/ulp.hpp"
    "${SRC_DIR}/glm/gtc/ulp.inl"
    "${SRC_DIR}/glm/gtc/vec1.hpp"
    "${SRC_DIR}/glm/gtx/associated_min_max.hpp"
    "${SRC_DIR}/glm/gtx/associated_min_max.inl"
    "${SRC_DIR}/glm/gtx/bit.hpp"
    "${SRC_DIR}/glm/gtx/bit.inl"
    "${SRC_DIR}/glm/gtx/closest_point.hpp"
    "${SRC_DIR}/glm/gtx/closest_point.inl"
    "${SRC_DIR}/glm/gtx/color_encoding.hpp"
    "${SRC_DIR}/glm/gtx/color_encoding.inl"
    "${SRC_DIR}/glm/gtx/color_space.hpp"
    "${SRC_DIR}/glm/gtx/color_space.inl"
    "${SRC_DIR}/glm/gtx/color_space_YCoCg.hpp"
    "${SRC_DIR}/glm/gtx/color_space_YCoCg.inl"
    "${SRC_DIR}/glm/gtx/common.hpp"
    "${SRC_DIR}/glm/gtx/common.inl"
    "${SRC_DIR}/glm/gtx/compatibility.hpp"
    "${SRC_DIR}/glm/gtx/compatibility.inl"
    "${SRC_DIR}/glm/gtx/component_wise.hpp"
    "${SRC_DIR}/glm/gtx/component_wise.inl"
    "${SRC_DIR}/glm/gtx/dual_quaternion.hpp"
    "${SRC_DIR}/glm/gtx/dual_quaternion.inl"
    "${SRC_DIR}/glm/gtx/easing.hpp"
    "${SRC_DIR}/glm/gtx/easing.inl"
    "${SRC_DIR}/glm/gtx/euler_angles.hpp"
    "${SRC_DIR}/glm/gtx/euler_angles.inl"
    "${SRC_DIR}/glm/gtx/extend.hpp"
    "${SRC_DIR}/glm/gtx/extend.inl"
    "${SRC_DIR}/glm/gtx/extended_min_max.hpp"
    "${SRC_DIR}/glm/gtx/extended_min_max.inl"
    "${SRC_DIR}/glm/gtx/exterior_product.hpp"
    "${SRC_DIR}/glm/gtx/exterior_product.inl"
    "${SRC_DIR}/glm/gtx/fast_exponential.hpp"
    "${SRC_DIR}/glm/gtx/fast_exponential.inl"
    "${SRC_DIR}/glm/gtx/fast_square_root.hpp"
    "${SRC_DIR}/glm/gtx/fast_square_root.inl"
    "${SRC_DIR}/glm/gtx/fast_trigonometry.hpp"
    "${SRC_DIR}/glm/gtx/fast_trigonometry.inl"
    "${SRC_DIR}/glm/gtx/float_notmalize.inl"
    "${SRC_DIR}/glm/gtx/functions.hpp"
    "${SRC_DIR}/glm/gtx/functions.inl"
    "${SRC_DIR}/glm/gtx/gradient_paint.hpp"
    "${SRC_DIR}/glm/gtx/gradient_paint.inl"
    "${SRC_DIR}/glm/gtx/handed_coordinate_space.hpp"
    "${SRC_DIR}/glm/gtx/handed_coordinate_space.inl"
    "${SRC_DIR}/glm/gtx/hash.hpp"
    "${SRC_DIR}/glm/gtx/hash.inl"
    "${SRC_DIR}/glm/gtx/integer.hpp"
    "${SRC_DIR}/glm/gtx/integer.inl"
    "${SRC_DIR}/glm/gtx/intersect.hpp"
    "${SRC_DIR}/glm/gtx/intersect.inl"
    "${SRC_DIR}/glm/gtx/io.hpp"
    "${SRC_DIR}/glm/gtx/io.inl"
    "${SRC_DIR}/glm/gtx/log_base.hpp"
    "${SRC_DIR}/glm/gtx/log_base.inl"
    "${SRC_DIR}/glm/gtx/matrix_cross_product.hpp"
    "${SRC_DIR}/glm/gtx/matrix_cross_product.inl"
    "${SRC_DIR}/glm/gtx/matrix_decompose.hpp"
    "${SRC_DIR}/glm/gtx/matrix_decompose.inl"
    "${SRC_DIR}/glm/gtx/matrix_factorisation.hpp"
    "${SRC_DIR}/glm/gtx/matrix_factorisation.inl"
    "${SRC_DIR}/glm/gtx/matrix_interpolation.hpp"
    "${SRC_DIR}/glm/gtx/matrix_interpolation.inl"
    "${SRC_DIR}/glm/gtx/matrix_major_storage.hpp"
    "${SRC_DIR}/glm/gtx/matrix_major_storage.inl"
    "${SRC_DIR}/glm/gtx/matrix_operation.hpp"
    "${SRC_DIR}/glm/gtx/matrix_operation.inl"
    "${SRC_DIR}/glm/gtx/matrix_query.hpp"
    "${SRC_DIR}/glm/gtx/matrix_query.inl"
    "${SRC_DIR}/glm/gtx/matrix_transform_2d.hpp"
    "${SRC_DIR}/glm/gtx/matrix_transform_2d.inl"
    "${SRC_DIR}/glm/gtx/mixed_product.hpp"
    "${SRC_DIR}/glm/gtx/mixed_product.inl"
    "${SRC_DIR}/glm/gtx/norm.hpp"
    "${SRC_DIR}/glm/gtx/norm.inl"
    "${SRC_DIR}/glm/gtx/normal.hpp"
    "${SRC_DIR}/glm/gtx/normal.inl"
    "${SRC_DIR}/glm/gtx/normalize_dot.hpp"
    "${SRC_DIR}/glm/gtx/normalize_dot.inl"
    "${SRC_DIR}/glm/gtx/number_precision.hpp"
    "${SRC_DIR}/glm/gtx/number_precision.inl"
    "${SRC_DIR}/glm/gtx/optimum_pow.hpp"
    "${SRC_DIR}/glm/gtx/optimum_pow.inl"
    "${SRC_DIR}/glm/gtx/orthonormalize.hpp"
    "${SRC_DIR}/glm/gtx/orthonormalize.inl"
    "${SRC_DIR}/glm/gtx/perpendicular.hpp"
    "${SRC_DIR}/glm/gtx/perpendicular.inl"
    "${SRC_DIR}/glm/gtx/polar_coordinates.hpp"
    "${SRC_DIR}/glm/gtx/polar_coordinates.inl"
    "${SRC_DIR}/glm/gtx/projection.hpp"
    "${SRC_DIR}/glm/gtx/projection.inl"
    "${SRC_DIR}/glm/gtx/quaternion.hpp"
    "${SRC_DIR}/glm/gtx/quaternion.inl"
    "${SRC_DIR}/glm/gtx/range.hpp"
    "${SRC_DIR}/glm/gtx/raw_data.hpp"
    "${SRC_DIR}/glm/gtx/raw_data.inl"
    "${SRC_DIR}/glm/gtx/rotate_normalized_axis.hpp"
    "${SRC_DIR}/glm/gtx/rotate_normalized_axis.inl"
    "${SRC_DIR}/glm/gtx/rotate_vector.hpp"
    "${SRC_DIR}/glm/gtx/rotate_vector.inl"
    "${SRC_DIR}/glm/gtx/scalar_multiplication.hpp"
    "${SRC_DIR}/glm/gtx/scalar_relational.hpp"
    "${SRC_DIR}/glm/gtx/scalar_relational.inl"
    "${SRC_DIR}/glm/gtx/spline.hpp"
    "${SRC_DIR}/glm/gtx/spline.inl"
    "${SRC_DIR}/glm/gtx/std_based_type.hpp"
    "${SRC_DIR}/glm/gtx/std_based_type.inl"
    "${SRC_DIR}/glm/gtx/string_cast.hpp"
    "${SRC_DIR}/glm/gtx/string_cast.inl"
    "${SRC_DIR}/glm/gtx/texture.hpp"
    "${SRC_DIR}/glm/gtx/texture.inl"
    "${SRC_DIR}/glm/gtx/transform.hpp"
    "${SRC_DIR}/glm/gtx/transform.inl"
    "${SRC_DIR}/glm/gtx/transform2.hpp"
    "${SRC_DIR}/glm/gtx/transform2.inl"
    "${SRC_DIR}/glm/gtx/type_aligned.hpp"
    "${SRC_DIR}/glm/gtx/type_aligned.inl"
    "${SRC_DIR}/glm/gtx/type_trait.hpp"
    "${SRC_DIR}/glm/gtx/type_trait.inl"
    "${SRC_DIR}/glm/gtx/vec_swizzle.hpp"
    "${SRC_DIR}/glm/gtx/vector_angle.hpp"
    "${SRC_DIR}/glm/gtx/vector_angle.inl"
    "${SRC_DIR}/glm/gtx/vector_query.hpp"
    "${SRC_DIR}/glm/gtx/vector_query.inl"
    "${SRC_DIR}/glm/gtx/wrap.hpp"
    "${SRC_DIR}/glm/gtx/wrap.inl"
    "${SRC_DIR}/glm/integer.hpp"
    "${SRC_DIR}/glm/mat2x2.hpp"
    "${SRC_DIR}/glm/mat2x3.hpp"
    "${SRC_DIR}/glm/mat2x4.hpp"
    "${SRC_DIR}/glm/mat3x2.hpp"
    "${SRC_DIR}/glm/mat3x3.hpp"
    "${SRC_DIR}/glm/mat3x4.hpp"
    "${SRC_DIR}/glm/mat4x2.hpp"
    "${SRC_DIR}/glm/mat4x3.hpp"
    "${SRC_DIR}/glm/mat4x4.hpp"
    "${SRC_DIR}/glm/matrix.hpp"
    "${SRC_DIR}/glm/packing.hpp"
    "${SRC_DIR}/glm/simd/common.h"
    "${SRC_DIR}/glm/simd/exponential.h"
    "${SRC_DIR}/glm/simd/geometric.h"
    "${SRC_DIR}/glm/simd/integer.h"
    "${SRC_DIR}/glm/simd/matrix.h"
    "${SRC_DIR}/glm/simd/neon.h"
    "${SRC_DIR}/glm/simd/packing.h"
    "${SRC_DIR}/glm/simd/platform.h"
    "${SRC_DIR}/glm/simd/trigonometric.h"
    "${SRC_DIR}/glm/simd/vector_relational.h"
    "${SRC_DIR}/glm/trigonometric.hpp"
    "${SRC_DIR}/glm/vec2.hpp"
    "${SRC_DIR}/glm/vec3.hpp"
    "${SRC_DIR}/glm/vec4.hpp"
    "${SRC_DIR}/glm/vector_relational.hpp"
)

set(OTHER_FILES
)

add_library(${GLM_TGT_NAME} ${SOURCE_FILES} ${OTHER_FILES})
setup_source_groups("${SOURCE_FILES}" "${OTHER_FILES}")
target_include_directories(${GLM_TGT_NAME} PUBLIC ${INCLUDE_PATHS})
